--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
     left: 150px;
     color: rgb(233, 233, 233);
     text-align: center;
+    
+    box-shadow: 0px 0px 5px 0px rgb(75, 75, 75);
 }
 
 .food {
